force-app/main/default/objects/Provision__c/fields/Verkaufschance__c.field-meta.xml
<CustomField>
    <fullName>Verkaufschance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Provisionen</relationshipLabel>
    <relationshipName>Provisionen</relationshipName>
    <type>Lookup</type>
</CustomField>