force-app/main/default/objects/Provision__c/fields/VerkaufsprovisionInProzent__c.field-meta.xml
<CustomField>
    <fullName>VerkaufsprovisionInProzent__c</fullName>
    <formula>Wert_Verk_ufer_Beratungsprovision_m_R__c / Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Verkaufsprovision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>