force-app/main/default/objects/Provision__c/fields/Vollst_ndige_Adresse_Makler__c.field-meta.xml
<CustomField>
    <fullName>Vollst_ndige_Adresse_Makler__c</fullName>
    <formula>Makler__r.Account.BillingStreet + &apos;, &apos; +  Makler__r.Account.BillingPostalCode + &apos; &apos; +  Makler__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vollständige Adresse Makler</label>
    <type>Text</type>
</CustomField>