force-app/main/default/objects/Provision__c/fields/Vollst_ndiger_Gutschrift_Empf_nger__c.field-meta.xml
<CustomField>
    <fullName>Vollst_ndiger_Gutschrift_Empf_nger__c</fullName>
    <formula>Makler__r.Account.Unternehmensname__c + &apos; / &apos; +  Makler__r.FirstName + &apos; &apos; + Makler__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vollständiger Gutschrift Empfänger</label>
    <type>Text</type>
</CustomField>