force-app/main/default/objects/Provision__c/fields/Vollst_ndiger_Name_Kunde__c.field-meta.xml
<CustomField>
    <fullName>Vollst_ndiger_Name_Kunde__c</fullName>
    <formula>TEXT(Kunde__r.Salutation) + &apos; &apos; + Kunde__r.FirstName + &apos; &apos; + Kunde__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vollständiger Name Kunde</label>
    <type>Text</type>
</CustomField>