force-app/main/default/objects/Provision__c/fields/Wert_Beteiligung_SMB_an_JMB__c.field-meta.xml
<CustomField>
    <fullName>Wert_Beteiligung_SMB_an_JMB__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Beteiligung SMB an JMB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>