force-app/main/default/objects/Provision__c/fields/Wert_Differenzprovision_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Wert_Differenzprovision_o_LNK__c</fullName>
    <formula>Wert_Differenzprovision__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wert Differenzprovision o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>