force-app/main/default/objects/Provision__c/fields/Wert_Provision_Thoben__c.field-meta.xml
<CustomField>
    <fullName>Wert_Provision_Thoben__c</fullName>
    <label>Wert Provision Thoben</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>