force-app/main/default/objects/Provision__c/fields/Wert_Referentenverf_gutung_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Wert_Referentenverf_gutung_o_LNK__c</fullName>
    <formula>Wert_Referentenverg_tung__c / IF( INCLUDES(Makler__r.Gesch_ftsbeziehung__c, &apos;Mitarbeiter WH&apos;), 1.12, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wert Referentenverfügutung o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>