force-app/main/default/objects/Provision__c/fields/Wert_Referentenverg_tung__c.field-meta.xml
<CustomField>
    <fullName>Wert_Referentenverg_tung__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Referentenvergütung</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>