force-app/main/default/objects/Provision__c/fields/Wert_SMB_an_JMB_Beteiligung_o_LNK__c.field-meta.xml
<CustomField>
    <fullName>Wert_SMB_an_JMB_Beteiligung_o_LNK__c</fullName>
    <formula>Wert_Beteiligung_SMB_an_JMB__c / 1.12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Wert SMB an JMB Beteiligung o. LNK.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>