force-app/main/default/objects/Provision__c/fields/Wert_Sonstige_1__c.field-meta.xml
<CustomField>
    <fullName>Wert_Sonstige_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Sonstige 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>