force-app/main/default/objects/Provision__c/fields/Wert_Sonstige_2__c.field-meta.xml
<CustomField>
    <fullName>Wert_Sonstige_2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Sonstige 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>