force-app/main/default/objects/Provision__c/fields/Wert_Tippprovision__c.field-meta.xml
<CustomField>
    <fullName>Wert_Tippprovision__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Wert Tippprovision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>