force-app/main/default/objects/Provision__c/fields/Wert_Verk_ufer_Beratungsprovision_o_R__c.field-meta.xml
<CustomField>
    <fullName>Wert_Verk_ufer_Beratungsprovision_o_R__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Beratungsprovision (o.R.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>