force-app/main/default/objects/Provision__c/fields/WI_Abrechnung__c.field-meta.xml
<CustomField>
    <fullName>WI_Abrechnung__c</fullName>
    <formula>Objekt__r.WI_Abrechnung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WI Abrechnung</label>
    <type>Checkbox</type>
</CustomField>