force-app/main/default/objects/Provision__c/fields/Wohneinheit__c.field-meta.xml
<CustomField>
    <fullName>Wohneinheit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Wohneinheit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Appartment__c.Property__c</field>
            <operation>equals</operation>
            <valueField>$Source.Objekt__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Appartment__c</referenceTo>
    <relationshipLabel>Provisionen</relationshipLabel>
    <relationshipName>Provisionen</relationshipName>
    <type>Lookup</type>
</CustomField>