force-app/main/default/objects/Provision__c/fields/X1_MaBV_Rate_gezahlt__c.field-meta.xml
<CustomField>
    <fullName>X1_MaBV_Rate_gezahlt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1. MaBV Rate gezahlt</label>
    <type>Checkbox</type>
</CustomField>