force-app/main/default/objects/Provision__c/fields/Zahlungsavis__c.field-meta.xml
<CustomField>
    <fullName>Zahlungsavis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zahlungsavis</label>
    <type>Checkbox</type>
</CustomField>