force-app/main/default/objects/Provision__c/validationRules/BestaetigteProvisionMussStorniertWerden.validationRule-meta.xml
<ValidationRule>
    <fullName>BestaetigteProvisionMussStorniertWerden</fullName>
    <active>true</active>
    <errorConditionFormula>PRIORVALUE(GutschriftBestaetigt__c) &amp;&amp; !GutschriftBestaetigt__c &amp;&amp; !GutschriftStorniert__c</errorConditionFormula>
    <errorDisplayField>GutschriftBestaetigt__c</errorDisplayField>
    <errorMessage>Eine bereits bestätigte Provision muss erst storniert werden</errorMessage>
</ValidationRule>