force-app/main/default/objects/Provision__c/validationRules/GutschriftKannNichtBestaetigtWerden.validationRule-meta.xml
<ValidationRule>
    <fullName>GutschriftKannNichtBestaetigtWerden</fullName>
    <active>true</active>
    <errorConditionFormula>GutschriftBestaetigt__c &amp;&amp;
!PRIORVALUE(GutschriftBestaetigt__c) &amp;&amp;
Genehmigung__c &amp;&amp;
!PRIORVALUE(Genehmigung__c)</errorConditionFormula>
    <errorDisplayField>GutschriftBestaetigt__c</errorDisplayField>
    <errorMessage>Die Provision muss erst durch den MB genehmigt werden und danach bestätigt.</errorMessage>
</ValidationRule>