force-app/main/default/objects/Provision__c/listViews/asasd.listView-meta.xml
<ListView>
    <fullName>asasd</fullName>
    <columns>Notartermin__c</columns>
    <columns>NAME</columns>
    <columns>Maklerbetreuer__c</columns>
    <columns>GutschriftLaufnummerNew__c</columns>
    <columns>Gutschrift_Laufnummer_Zahl__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Liste Provisionen</label>
</ListView>