force-app/main/default/objects/Provision__c/listViews/Meine_Provisionen.listView-meta.xml
<ListView>
    <fullName>Meine_Provisionen</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MaklerDarfProvisionSehen__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Meine Provisionen</label>
</ListView>