force-app/main/default/objects/Provision__c/listViews/Provisionen.listView-meta.xml
<ListView>
    <fullName>Provisionen</fullName>
    <columns>Makler__c</columns>
    <columns>Provisionsbetrag__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>ProvisionsvoraussetzungenErfuelltAm__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Provisionen</label>
</ListView>